badgeServiceImpl modified